# Neuro_Lab_Diffusion_Mark1

./: .gitignore  452_hours.md  Dockerfile  README.md  diffusion_log.txt  evaluate_models.py  pyproject.toml  report.md  test_vae_reconstruction.py  train_diffusion.py  train_diffusion2.py  train_diffusion_flow.py  train_vae.py  visualize_bridge.py
data/: data_utils.py  dataset.py  dataset2.py
models/: bridge_dit.py  diffusion.py  dit_1d.py  vae.py
