[project]
name = "neuro-labs"
version = "0.1.0"
description = "Chain of Thought Latent Diffusion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision",
    "sentence-transformers>=2.5.0",
    "numpy",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }